test/corpus/assignment.txt
================================================================================
This Assignment
================================================================================

class Foo(){
  var foo = null
  constructor(bar:Int) {
    this.foo = bar
  }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (type_identifier)
    primary_constructor: (primary_constructor)
    body: (class_body
      (property_declaration
        variable: (variable_declaration
          (simple_identifier)))
      (secondary_constructor
        parameters: (function_value_parameters
          (parameter
            (simple_identifier)
            (user_type
              (type_identifier))))
        body: (statements
          (assignment
            (directly_assignable_expression
              (this_expression)
              (navigation_suffix
                (simple_identifier)))
            (simple_identifier)))))))

================================================================================
Index Assignment
================================================================================

fun main(){
  var listOfPets:Array<String>
  listOfPets[0] = "foo"
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (statements
        (property_declaration
          variable: (variable_declaration
            (simple_identifier)
            (user_type
              (type_identifier)
              (type_arguments
                (type_projection
                  (user_type
                    (type_identifier)))))))
        (assignment
          (directly_assignable_expression
            (simple_identifier)
            (indexing_suffix
              (integer_literal)))
          (string_literal (string_start) (string_content) (string_end)))))))
