test/corpus/source-files.txt
================================================================================
File annotations
================================================================================

@file:JvmName("HelloWorld")

val x = 4

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_start) (string_content) (string_end))))))
  (property_declaration
    variable: (variable_declaration
      (simple_identifier))
    expression: (integer_literal)))

================================================================================
Multiple file annotations
================================================================================

@file:JvmMultifileClass
@file:JvmName("BuildersKt")
@file:OptIn(ExperimentalContracts::class)

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (user_type
      (type_identifier)))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_start) (string_content) (string_end))))))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (callable_reference
            (type_identifier)))))))

================================================================================
Imports
================================================================================

import java.util.Scanner
import java.util.StringBuilder

import java.io.Path
import java.io.Files
fun main() {
}

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))))
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))))
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body)))

================================================================================
Multiple Imports On A Single Line
================================================================================

import java.io.Path import java.io.Files

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))))
